Converting color attribute to other type in vertex paint mode then assign color cause a crash #119586

Closed
opened 2024-03-17 08:44:42 +01:00 by Andrea-Lanaro · 3 comments

System Information
Operating system: Windows-10-10.0.17763-SP0
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 4.6.0 NVIDIA 551.61

Blender Version

Broken:

Worked:

  • 3.6.9 LTS

Short description of error
It is possible to assign vertex color to non-color attribute and cause a crash. Assigning color return nothing safely in 3.6.

Exact steps for others to reproduce the error

  1. Enter vertex paint mode
  2. Convert auto-created attribute to non-color type
  3. Assign vertex color
**System Information** Operating system: Windows-10-10.0.17763-SP0 Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 4.6.0 NVIDIA 551.61 **Blender Version** Broken: - 4.0.2 (2023-12-05) 9be62e85b727 - 4.1 rc (2024-03-17) 714ebd6890c2 Worked: - 3.6.9 LTS **Short description of error** It is possible to assign vertex color to non-color attribute and cause a crash. Assigning color return nothing safely in 3.6. **Exact steps for others to reproduce the error** 1. Enter vertex paint mode 2. Convert auto-created attribute to non-color type 3. Assign vertex color
Andrea-Lanaro added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-17 08:44:43 +01:00
Iliya Katushenock added this to the 4.1 milestone 2024-03-17 08:54:33 +01:00
@HooglyBoogly /
Member

active_color_attribute is still "convert_me" after changing the data-type, it should be null or new in this case, checking further

`active_color_attribute` is still "convert_me" after changing the data-type, it should be null or new in this case, checking further
Member

Something like this should fix the problem:

diff --git a/source/blender/editors/geometry/geometry_attributes.cc b/source/blender/editors/geometry/geometry_attributes.cc
index 5244da22353..759f50ae14e 100644
--- a/source/blender/editors/geometry/geometry_attributes.cc
+++ b/source/blender/editors/geometry/geometry_attributes.cc
@@ -429,6 +429,13 @@ static int geometry_attribute_convert_exec(bContext *C, wmOperator *op)
       {
         return OPERATOR_CANCELLED;
       }
+      if (!BKE_id_attribute_search(
+              &mesh->id, mesh->active_color_attribute, CD_MASK_COLOR_ALL, ATTR_DOMAIN_MASK_COLOR))
+      {
+        CustomDataLayer* layer = BKE_id_attribute_from_index(&mesh->id, 0, ATTR_DOMAIN_MASK_COLOR, CD_MASK_COLOR_ALL);
+        BKE_id_attributes_active_color_set(&mesh->id, layer->name);
+      }
       break;
     }
     case ConvertAttributeMode::VertexGroup: {
Something like this should fix the problem: ```Diff diff --git a/source/blender/editors/geometry/geometry_attributes.cc b/source/blender/editors/geometry/geometry_attributes.cc index 5244da22353..759f50ae14e 100644 --- a/source/blender/editors/geometry/geometry_attributes.cc +++ b/source/blender/editors/geometry/geometry_attributes.cc @@ -429,6 +429,13 @@ static int geometry_attribute_convert_exec(bContext *C, wmOperator *op) { return OPERATOR_CANCELLED; } + if (!BKE_id_attribute_search( + &mesh->id, mesh->active_color_attribute, CD_MASK_COLOR_ALL, ATTR_DOMAIN_MASK_COLOR)) + { + CustomDataLayer* layer = BKE_id_attribute_from_index(&mesh->id, 0, ATTR_DOMAIN_MASK_COLOR, CD_MASK_COLOR_ALL); + BKE_id_attributes_active_color_set(&mesh->id, layer->name); + } break; } case ConvertAttributeMode::VertexGroup: { ```
Pratik Borhade self-assigned this 2024-03-18 07:47:32 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-03-18 20:49:44 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-19 19:49:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119586
No description provided.