Fix #119586: Crash after converting color attribute

Painting in vertex paint mode after converting the color attribute to
general type will cause the crash. `active_color_attribute` is not updated
which causes `pbvh->color_layer=nullptr`